--- a/haskell/math-expression-interpreter.cabal
+++ b/haskell/math-expression-interpreter.cabal
@@ -23,7 +23,9 @@ source-repository head
 
 library
   exposed-modules:
-      Lexer, Parser, Evaluate
+      Evaluate
+      Lexer
+      Parser
   other-modules:
       Paths_math_expression_interpreter
   hs-source-dirs:
